@startuml database

entity "users" as U {
    * ID : int << generated private key >>
    * name : string
    * surname : string
    * isRDZ : bool
    * credits4000 : uint
    * credits1500 : uint
    * phoneNumber : phone number
    * mailAddress : string
}

entity "planes" as P {
    * ID : int << generated private key >>
    * Model : string
    * registration : string
    * seatCount : uint
}

entity "flight" as F {
    * ID : int << generated >>
    * planeID : int << foreign key >>
    * Departure : date with hour
}

entity "flightUser" as FU {
    * flightID : int << foreign key >>
    * userID : int << foreign key >>
}

P ||--|| F
U }o--|| FU
F }o--|| FU

@enduml